ended implementation and fixed bugs